updates to to nav bar

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,3 +27,11 @@ body {
     left: -100px;
   }
 }
+
+/* vu-anh-TiVPTYCG_3E-unsplash 1 */
+
+// .kw-header {
+//   background: linear-gradient(111.95deg, rgba(0, 62, 156, 0.66) 21.02%, rgba(33, 81, 138, 0.2508) 84.13%);
+// }
+
+
